Add static content for images, changed dashboard screenshot

--- a/view/adminhtml/templates/custom/template.phtml
+++ b/view/adminhtml/templates/custom/template.phtml
@@ -1,8 +1,4 @@
 <?php
-
-// @todo remove, will not work with static assets
-$pluginUrl = $block->getBaseUrl();
-
 $message = $block->getMessage();
 $formAction = $block->getFormAction();
 $email = $block->getEmail();
@@ -16,7 +12,7 @@ $options = $block->getOptions();
 			<div id="third">
 				<section class="top-bar">
 					<div class="text-center">
-						<img src="<?= $pluginUrl ?>/images/logo.png" alt="smartsupp logo" />
+						<img src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/logo.png') ?>" alt="smartsupp logo" />
 					</div>
 				</section>
 				<section class="deactivate">
@@ -75,7 +71,7 @@ $options = $block->getOptions();
 			<div id="first">
 				<section class="top-bar">
 					<div class="">
-						<img src="<?= $pluginUrl ?>/images/logo.png" alt="smartsupp logo" />
+						<img src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/logo.png') ?>" alt="smartsupp logo" />
 						<a href="javascript: void(0);" class="js-login btn btn-default">Connect existing account</a>
 					</div>
 				</section>
@@ -87,7 +83,7 @@ $options = $block->getOptions();
 							<a href="javascript: void(0);" class="js-register btn btn-primary btn-xl">Create a free account</a>
 						</div>
 						<div class="intro--image">
-							<img src="<?= $pluginUrl ?>/images/intro-img.png" alt="intro" />
+							<img src="https://www.smartsupp.com/assets/images/dash/en.png" alt="intro" />
 						</div>
 					</div>
 				</section>
@@ -118,10 +114,10 @@ $options = $block->getOptions();
 						</div>
 						<div class="section--body">
 							<div class="customers">
-								<img class="partner" src="<?= $pluginUrl ?>/images/skoda.png" alt="ŠKODA AUTO a.s." />
-								<img class="partner" src="<?= $pluginUrl ?>/images/gekko.png" alt="GEKKO Computer" />
-								<img class="partner" src="<?= $pluginUrl ?>/images/lememo.png" alt="Lememo" />
-								<img class="partner" src="<?= $pluginUrl ?>/images/conrad.png" alt="Conrad" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/gekko.png') ?>" alt="GEKKO Computer" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/lememo.png') ?>" alt="Lememo" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/conrad.png') ?>" alt="Conrad" />
 							</div>
 						</div>
 					</div>
@@ -133,7 +129,7 @@ $options = $block->getOptions();
 				<section class="top-bar">
 					<div>
 						<a href="javascript: void(0);" class="js-close-form">
-							<img src="<?= $pluginUrl ?>/images/logo.png" alt="smartsupp logo" />
+							<img src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/logo.png') ?>" alt="smartsupp logo" />
 							<a href="javascript: void(0);" class="btn btn-default" data-toggle-form data-multitext data-register="Connect existing account" data-login="Create a free account">
 								<?= $formAction === 'register' ? 'Connect existing account' : 'Create a free account' ?>
 							</a>
@@ -193,10 +189,10 @@ $options = $block->getOptions();
 						</div>
 						<div class="section--body">
 							<div class="customers">
-								<img class="partner" src="<?= $pluginUrl ?>/images/skoda.png" alt="ŠKODA AUTO a.s." />
-								<img class="partner" src="<?= $pluginUrl ?>/images/gekko.png" alt="GEKKO Computer" />
-								<img class="partner" src="<?= $pluginUrl ?>/images/lememo.png" alt="Lememo" />
-								<img class="partner" src="<?= $pluginUrl ?>/images/conrad.png" alt="Conrad" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/gekko.png') ?>" alt="GEKKO Computer" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/lememo.png') ?>" alt="Lememo" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_SmartSupp::img/conrad.png') ?>" alt="Conrad" />
 							</div>
 						</div>
 					</div>
