Unify CSS styles and resources location

--- a/view/adminhtml/templates/custom/template.phtml
+++ b/view/adminhtml/templates/custom/template.phtml
@@ -12,7 +12,7 @@ $options = $block->getOptions();
 			<div id="third">
 				<section class="top-bar">
 					<div class="text-center">
-						<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/logo.png') ?>" alt="smartsupp logo" />
+						<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/logo.png') ?>" alt="smartsupp logo" />
 					</div>
 				</section>
 				<section class="deactivate">
@@ -71,14 +71,14 @@ $options = $block->getOptions();
 			<div id="first">
 				<section class="top-bar">
 					<div class="">
-						<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/logo.png') ?>" alt="smartsupp logo" />
+						<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/logo.png') ?>" alt="smartsupp logo" />
 						<a href="javascript: void(0);" class="js-login btn btn-default">Connect existing account</a>
 					</div>
 				</section>
 				<section class="intro">
 					<div class="">
 						<h1 class="lead">Free live chat with visitor recording</h1>
-						<h3>Your customers are on your website right now. Chat with them and see what they do.</h3>
+						<h3>Your customers are on your website right now. <br/>Chat with them and see what they do.</h3>
 						<div class="intro--btn">
 							<a href="javascript: void(0);" class="js-register btn btn-primary btn-xl">Create a free account</a>
 						</div>
@@ -114,10 +114,10 @@ $options = $block->getOptions();
 						</div>
 						<div class="section--body">
 							<div class="customers">
-								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
-								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/gekko.png') ?>" alt="GEKKO Computer" />
-								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/lememo.png') ?>" alt="Lememo" />
-								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/conrad.png') ?>" alt="Conrad" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/gekko.png') ?>" alt="GEKKO Computer" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/lememo.png') ?>" alt="Lememo" />
+								<img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/conrad.png') ?>" alt="Conrad" />
 							</div>
 						</div>
 					</div>
@@ -129,7 +129,7 @@ $options = $block->getOptions();
 				<section class="top-bar">
 					<div>
 						<a href="javascript: void(0);" class="js-close-form">
-							<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/logo.png') ?>" alt="smartsupp logo" />
+							<img src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/logo.png') ?>" alt="smartsupp logo" />
 							<a href="javascript: void(0);" class="btn btn-default" data-toggle-form data-multitext data-register="Connect existing account" data-login="Create a free account">
 								<?= $formAction === 'register' ? 'Connect existing account' : 'Create a free account' ?>
 							</a>
@@ -189,10 +189,10 @@ $options = $block->getOptions();
 						</div>
 						<div class="section--body">
 							<div class="customers">
-                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
-                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/gekko.png') ?>" alt="GEKKO Computer" />
-                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/lememo.png') ?>" alt="Lememo" />
-                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::img/conrad.png') ?>" alt="Conrad" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/skoda.png') ?>" alt="ŠKODA AUTO a.s." />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/gekko.png') ?>" alt="GEKKO Computer" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/lememo.png') ?>" alt="Lememo" />
+                                <img class="partner" src="<?php echo $this->getViewFileUrl('Smartsupp_Smartsupp::images/conrad.png') ?>" alt="Conrad" />
 							</div>
 						</div>
 					</div>
