Unify HTML structure on page after account is assigned

--- a/view/adminhtml/templates/custom/template.phtml
+++ b/view/adminhtml/templates/custom/template.phtml
@@ -23,9 +23,11 @@ $options = $block->getOptions();
 						</p>
 						<div class="clear"></div>
 						<section class="intro">
-							<h3 class="bold">Smartsupp’s chat box is now visible on your website.</h3>
-							<h4>Go to Smartsupp to chat with visitors, customize chat box design and access all features.</h4>
-							<div class="intro--btn">
+                            <h4>
+                                <strong class="green">Smartsupp’s chat box is now visible on your website.</strong> <br /><br />
+                                Go to Smartsupp to chat with visitors, customize chat box design and access all features.
+                            </h4>
+                            <div class="intro--btn">
 								<a href="https://dashboard.smartsupp.com?utm_source=Magento&utm_medium=integration&utm_campaign=link" target="_blank" class="js-register btn btn-primary btn-xl">Go to Smartsupp</a>
 							</div>
 							<p class="tiny text-center bigger-m">(This will open a new browser tab)</p>
