--- a/view/adminhtml/layout/smartsupp_settings_index.xml
+++ b/view/adminhtml/layout/smartsupp_settings_index.xml
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<referenceContainer name="content">
-			<block class="Smartsupp\Smartsupp\Block\Adminhtml\SmartsuppBlock" name="Overview" template="Smartsupp_Smartsupp::custom/template.phtml" />
+			<block class="Smartsupp\Smartsupp\Block\Adminhtml\SmartsuppBlock" name="smartsupp.settings" template="Smartsupp_Smartsupp::settings.phtml" />
 		</referenceContainer>
 	</body>
 </page>
