--- a/view/adminhtml/templates/settings.phtml
+++ b/view/adminhtml/templates/settings.phtml
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 <div class="wrap" id="content">
-	<?php if ($this->getEnabled()) { ?>
+	<?php if ($this->getActive()) { ?>
 		<main role="main">
 			<div id="third">
 				<section class="top-bar">
