--- a/view/frontend/templates/javascript.phtml
+++ b/view/frontend/templates/javascript.phtml
@@ -2,33 +2,16 @@
 
 use Smartsupp\ChatGenerator;
 
-// @todo put into some config
-$config = @file_get_contents(__DIR__ . '/../../../etc/config.json');
-
-if ($config === FALSE) {
-	$config = ['active' => FALSE];
-} else {
-	$config = json_decode($config, JSON_OBJECT_AS_ARRAY);
-}
-
-if ($config['active']) {
-	$chat = new ChatGenerator($config['chat-id']);
-	$chat->setEmail($config['email']);
-	$chat->render(TRUE);
+if ($block->_getOption('active')) {
+	$chat = new ChatGenerator($block->_getOption('chatId'));
+	$chat->setEmail($block->_getOption('email'));
+	$chat->render(true);
 }
 
 /**
  // @todo obtain information about visitor
-$om = \Magento\Framework\App\ObjectManager::getInstance();
-
-$customerSession = $om->get('Magento\Customer\Model\Session');
-if ($customerSession->isLoggedIn()) {
-echo 'smartlook(\'tag\', \'email\', ' . json_encode($customerSession->getCustomer()->getEmail()) . ');';
-echo 'smartlook(\'tag\', \'name\', ' . json_encode($customerSession->getCustomer()->getName()) . ');';
-echo 'smartlook(\'tag\', \'id\', ' . json_encode($customerSession->getCustomer()->getId()) . ');';
-}
  */
 
-if (isset($config['optional-code']) && $config['optional-code']) {
-	echo '<script>' . stripcslashes($config['optional-code']) . '</script>';
+if ($optionalCode = $block->_getOption('optionalCode')) {
+	echo '<script>' . stripcslashes($optionalCode) . '</script>';
 }
